Fixing writing of official scripts and file leak (Fix #2562)
git-svn-id: file:///home/svn/omero/trunk@7457 05709c45-44f0-0310-885b-81a1db45b4a6